# require-addon

./: README.md  bare.js  default.js  index.js  node.js  package.json  test.js
.github/workflows/: integrate.yml
lib/: default.js  node.js  runtime.js
lib/runtime/: bare.js  default.js  node.js
test/fixtures/addon/: CMakeLists.txt  binding.c  package.json
test/fixtures/addon/prebuilds/darwin-arm64/: addon.bare  addon.node
test/fixtures/addon/prebuilds/darwin-x64/: addon.bare  addon.node
test/fixtures/addon/prebuilds/linux-arm64/: addon.bare  addon.node
test/fixtures/addon/prebuilds/linux-x64/: addon.bare  addon.node
test/fixtures/addon/prebuilds/win32-arm64/: addon.bare  addon.node
test/fixtures/addon/prebuilds/win32-x64/: addon.bare  addon.node
